--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <hr>
         <div class="summary">
-            <h2>Order Summary</h2>
+            <h2 id='funni'>Order Summary</h2>
             <table>
                 <thead>
                     <tr>
